remove refferences to cevap repo and change to ioncoincore **TODO**: move and fork all dependant repositories

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -29,7 +29,7 @@ apps:
 
 parts:
   ion:
-    source: https://github.com/cevap/ion
+    source: https://github.com/ioncoincore/ion
     source-type: git
     source-tag: master
     plugin: autotools
