--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -29,7 +29,7 @@ packages:
 - "python"
 reference_datetime: "2015-06-01 00:00:00"
 remotes:
-- "url": "https://github.com/cevap/ion.git"
+- "url": "https://github.com/ioncoincore/ion.git"
   "dir": "ion"
 files: []
 script: |
